--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_box">
+                <div class="footer_info">
+                    <a href="#!" class="footer_link">
+                        <img src="./images/google.svg" alt="">
+                    </a>
+                    <a href="#!" class="footer_link">
+                        <img src="./images/apple.svg" alt="">
+                    </a>
+                </div>
+                <p class="footer_text">© PROWEB. В целях обучения 2021</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
